import com.github.jk1.license.filter.LicenseBundleNormalizer
import com.github.jk1.license.render.CsvReportRenderer
import com.github.jk1.license.render.InventoryHtmlReportRenderer
import com.github.spotbugs.snom.SpotBugsTask

plugins {
	id "com.github.ben-manes.versions" version "0.51.0" apply false
	id "com.github.spotbugs" version "6.0.0"
	id "com.github.jk1.dependency-license-report" version "3.1.2"
}

licenseReport {
	outputDir = file("$buildDir/reports/dependency-license")

	projects = [project] + subprojects

	configurations = ['runtimeClasspath']

	renderers = [
		new InventoryHtmlReportRenderer(),
		new CsvReportRenderer()
	]

	filters = [
	    new LicenseBundleNormalizer()
	]

	excludeOwnGroup = true
}

allprojects {
	apply plugin: "com.github.ben-manes.versions"

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs += ['-Xlint:deprecation']
    }

	dependencyUpdates {
        gradleReleaseChannel = "current"
        outputFormatter = "json"
    }

	repositories {  
		mavenCentral()
		maven {
        	url = "https://repo.spring.io/milestone/"
    	}  
    }
	version = '5.0.0-SNAPSHOT'

	project.ext{
		releaseRepoUrl = "file://${project(':').projectDir}/../mvn-repo/releases"
		snapshotRepoUrl = "file://${project(':').projectDir}/../mvn-repo/snapshots"
		version = version
		pdfasversion = version
		revision = getCheckedOutGitCommitHash()
		//tomcatVersion = '7.0.54';
		//tomcatVersion = '8.0.36';
		//tomcatVersion = '9.0.115';
		//tomcatVersion = '10.1.54';
		tomcatVersion = '11.0.22'
		slf4jVersion = '2.0.16'
		cxfVersion = '4.2.1'
		bouncyCastleVersion = '1.82'
		commonsCollectionsVersion = '4.5.0'
		commonsLang3Version = '3.20.0'
		commonsIoVersion = '2.21.0'
		commonsCodecVersion = '1.21.0'
		commonsTextVersion = '1.14.0'
		commonsCliVersion = '1.11.0'
		jettyVersion = '11.0.24'
		logbackVersion = '1.5.25'
		gsonVersion = '2.13.2'
		zxingVersion = '3.5.0'
		ognlVersion = '3.3.5'
		jsonVersion = '20250517'
		micrometerVersion = '1.15.4'
		springBootVersion = '4.0.6'
		junit4Version = '4.13.2'
		junitVersion = '6.1.0'
		jakartaActivationVersion = '2.1.4'
		jakartaJwsVersion = '3.0.0'
		jakartaXmlWsVersion = '4.0.3'
		jakartaServletVersion = '6.1.0'
		jaxbApiVersion = '4.0.4'
		jaxbRuntimeVersion = '4.0.7'
		pdfboxVersion = '3.0.6'
		ztZipVersion = '1.17'
		lombokVersion = '1.18.38'
	}
}

subprojects {
	apply plugin: 'java-library'
	apply plugin: 'eclipse'
	apply plugin: 'maven-publish'
	apply plugin: 'checkstyle'
	apply plugin: 'pmd'
	apply plugin: 'jacoco'
	apply plugin: 'com.github.spotbugs'
	group = 'at.gv.egiz.pdfas'

	pmd {
		ignoreFailures = System.getenv("CI") == "true"
	}

	def checkstyleConfig = rootProject.file("config/checkstyle/egiz_checks.xml")
	def isCi = (System.getenv("CI") ?: "false").toBoolean()

	checkstyle {
		toolVersion = "8.26"
		configFile = checkstyleConfig
		ignoreFailures = isCi
	}

	tasks.withType(Checkstyle).configureEach { task ->
		task.ignoreFailures = isCi
		task.onlyIf { checkstyleConfig.exists() }
		task.reports {
			xml.required = true
			html.required = false
		}
	}

	spotbugs {
		ignoreFailures = System.getenv("CI") == "true"
		effort = "max"
		reportLevel = "medium"
	}

	tasks.withType(SpotBugsTask).configureEach { task ->
		task.ignoreFailures = (System.getenv("CI") == "true")
		task.reports {
			xml.required = true
			html.required = false
		}
	}

	jacoco {
		toolVersion = "0.8.12"
	}

	tasks.withType(Test).configureEach {
		useJUnitPlatform()
		finalizedBy jacocoTestReport
	}

	jacocoTestReport {
		dependsOn test
		reports {
			xml.required = true
			html.required = true
			csv.required = false
		}
	}
	

	configurations {
		deployerJars
	}
	
	repositories { 
    mavenCentral() 
    mavenLocal()
    
    maven {
       	url = "https://repo.spring.io/milestone/"
       	mavenContent {
           	releasesOnly()
       	}
    }      
    maven {
       	url = "https://apps.egiz.gv.at/maven/"     	
       	mavenContent {
           	releasesOnly()
       	}
    }
    maven {
       	url = "https://apps.egiz.gv.at/maven-internal/"     	
       	mavenContent {
           	releasesOnly()
       	}
    }
    maven {
       	url = "https://apps.egiz.gv.at/maven-snapshot/"
       	mavenContent {
           	snapshotsOnly()
       	}
    }    
  }

	dependencies { 
		implementation group: 'org.projectlombok', name: 'lombok', version: lombokVersion
		annotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
		testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
		testImplementation group: 'junit', name: 'junit', version: junit4Version
		testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junitVersion
		testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-launcher', version: junitVersion
		testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: junitVersion
		testRuntimeOnly group: 'org.junit.vintage', name: 'junit-vintage-engine', version: junitVersion
	}

	tasks.register('sourcesJar', Jar) {
		dependsOn('classes')
		archiveClassifier.set('sources')
		from sourceSets.main.allSource
	}

	artifacts {
	    archives sourcesJar
	}

	java {
		sourceCompatibility = JavaVersion.VERSION_17
		targetCompatibility = JavaVersion.VERSION_17
	}
	compileJava.options.encoding = "UTF-8"
	compileTestJava.options.encoding = "UTF-8"
	
	jar { manifest.attributes provider: 'EGIZ', 'Specification-Version': getCheckedOutGitCommitHash(), 'Implementation-Version': project.version  }

	tasks.register('copyDeps', Copy) {
		from configurations.runtimeClasspath
		into(new File(rootDir, 'build/alldependencies')).toString()
	}

	tasks.register('copyDepsLocal', Copy) {
		from configurations.runtimeClasspath
		into 'build/alldependencies'
	}

	publishing {
    	publications {
        	myLibrary(MavenPublication) {
            	from components.java
        	}
    	}

    	repositories {
        	maven {
            	name = 'egiz_repo'
            	 url = version.endsWith('SNAPSHOT') ? project.snapshotRepoUrl : project.releaseRepoUrl
        	}
    	}
	}	
	
	// Legacy uploadArchives replaced with modern Maven publishing
	// Configure remote repositories in publishing block above  


	tasks.register('internalRelease') {
		doLast {

		}
	}
	
	internalRelease.dependsOn jar
	internalRelease.dependsOn sourcesJar
	
	gradle.taskGraph.whenReady {taskGraph ->
    	//if (taskGraph.hasTask(release)) {
        //	version = '1.0'
    	//} else {
	    //    version = '1.0-SNAPSHOT'
	    //}
	}
	
	//doFullRelease jar war distZip distTar releases sourcesJar uploadArchives

}

tasks.register('doFullRelease') {
	def projectVer = version
	doLast {
		println "done building all distribution stuff for " + projectVer
	}
}

tasks.register('assembleLicenses', Copy) {
	dependsOn('generateLicenseReport')

	// eigene projekt-lizenzen
	from("${rootProject.projectDir}/license") {
		into "project"
	}

	// generierter third-party-report
	from("${rootProject.buildDir}/reports/dependency-license") {
		into "third-party"
	}

	into "${rootProject.projectDir}/releases/${version}/licenses"
}

tasks.register('copyLicenses') {
	doLast {
		mkdir("releases/" + version + "/licenses");
		def target = rootProject.projectDir.toString() + "/releases/" + version + "/licenses"
		subprojects { subproject ->
			def src = subproject.projectDir.toString() + "/licenses"
			copy {
				from src
				into target
			}
		}
	}
}

tasks.register('releases', Copy) {
	dependsOn('assembleLicenses')
	from('doc') {
		include '*.pdf'
	}

	into "releases/" + version + "/docs"
}


def getCheckedOutGitCommitHash() {
    def takeFromHash = 40
    try {
		return providers.exec {
			commandLine('git', 'rev-parse', '--verify', 'HEAD')
		}.standardOutput.asText.get().trim().take(takeFromHash)
    } catch (Exception e) {
        return "unknown"
    }
}
/*
task docs(type: Javadoc) {
	source subprojects.collect {project -> project.sourceSets.main.allJava }
	classpath = files(subprojects.collect {project -> project.sourceSets.main.compileClasspath})
	destinationDir = new File(projectDir, 'docs/full')
}*/


